lib/gems/gems/rbs-2.1.0/ext/rbs_extension/lexer.c
/* Generated by re2c 2.2 */
#line 1 "ext/rbs_extension/lexer.re"
#include "rbs_extension.h"

token rbsparser_next_token(lexstate *state) {
  lexstate backup;

start:
  backup = *state;

  
#line 13 "ext/rbs_extension/lexer.c"
{
	unsigned int yych;
	unsigned int yyaccept = 0;
	yych = peek(state);
	switch (yych) {
	case 0x00000000:	goto yy2;
	case '\t':
	case '\n':
	case ' ':	goto yy6;
	case '!':	goto yy9;
	case '"':	goto yy11;
	case '#':	goto yy12;
	case '$':	goto yy15;
	case '%':	goto yy16;
	case '&':	goto yy17;
	case '\'':	goto yy19;
	case '(':	goto yy20;
	case ')':	goto yy22;
	case '*':	goto yy24;
	case '+':	goto yy26;
	case ',':	goto yy27;
	case '-':	goto yy29;
	case '.':	goto yy30;
	case '/':
	case '~':	goto yy32;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy33;
	case ':':	goto yy36;
	case '<':	goto yy38;
	case '=':	goto yy40;
	case '>':	goto yy42;
	case '?':	goto yy43;
	case '@':	goto yy45;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':	goto yy46;
	case '[':	goto yy49;
	case ']':	goto yy51;
	case '^':	goto yy53;
	case '_':	goto yy55;
	case '`':	goto yy57;
	case 'a':	goto yy59;
	case 'b':	goto yy61;
	case 'c':	goto yy62;
	case 'd':	goto yy63;
	case 'e':	goto yy64;
	case 'f':	goto yy65;
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'l':
	case 'q':
	case 'r':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy66;
	case 'i':	goto yy68;
	case 'm':	goto yy69;
	case 'n':	goto yy70;
	case 'o':	goto yy71;
	case 'p':	goto yy72;
	case 's':	goto yy73;
	case 't':	goto yy74;
	case 'u':	goto yy75;
	case 'v':	goto yy76;
	case '{':	goto yy77;
	case '|':	goto yy79;
	case '}':	goto yy81;
	default:	goto yy4;
	}
yy2:
	skip(state);
#line 137 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pEOF); }
#line 121 "ext/rbs_extension/lexer.c"
yy4:
	skip(state);
yy5:
#line 138 "ext/rbs_extension/lexer.re"
	{ return next_token(state, ErrorToken); }
#line 127 "ext/rbs_extension/lexer.c"
yy6:
	skip(state);
	yych = peek(state);
	if (yych <= 0x00000008) goto yy8;
	if (yych <= '\n') goto yy6;
	if (yych == ' ') goto yy6;
yy8:
#line 136 "ext/rbs_extension/lexer.re"
	{ state->start = state->current; goto start; }
#line 137 "ext/rbs_extension/lexer.c"
yy9:
	skip(state);
	yych = peek(state);
	if (yych == '=') goto yy32;
	if (yych == '~') goto yy32;
yy10:
#line 48 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tOPERATOR); }
#line 146 "ext/rbs_extension/lexer.c"
yy11:
	yyaccept = 0;
	skip(state);
	backup = *state;
	yych = peek(state);
	if (yych <= 0x00000000) goto yy5;
	goto yy84;
yy12:
	skip(state);
	yych = peek(state);
	if (yych <= 0x00000000) goto yy14;
	if (yych != '\n') goto yy12;
yy14:
#line 59 "ext/rbs_extension/lexer.re"
	{
        return next_token(
          state,
          state->first_token_of_line ? tLINECOMMENT : tCOMMENT
        );
      }
#line 167 "ext/rbs_extension/lexer.c"
yy15:
	skip(state);
	yych = peek(state);
	if (yych <= ')') {
		if (yych <= 0x0000001F) {
			if (yych <= '\n') {
				if (yych <= 0x00000000) goto yy5;
				if (yych <= 0x00000008) goto yy90;
				goto yy5;
			} else {
				if (yych == '\r') goto yy5;
				goto yy90;
			}
		} else {
			if (yych <= '#') {
				if (yych <= ' ') goto yy5;
				if (yych <= '"') goto yy93;
				goto yy90;
			} else {
				if (yych == '%') goto yy5;
				if (yych <= '\'') goto yy93;
				goto yy5;
			}
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '/') {
				if (yych == '-') goto yy90;
				goto yy93;
			} else {
				if (yych <= '9') goto yy90;
				if (yych <= '>') goto yy93;
				goto yy90;
			}
		} else {
			if (yych <= '^') {
				if (yych == '\\') goto yy93;
				goto yy5;
			} else {
				if (yych <= 'z') goto yy90;
				if (yych <= '}') goto yy5;
				if (yych <= '~') goto yy93;
				goto yy90;
			}
		}
	}
yy16:
	yyaccept = 1;
	skip(state);
	backup = *state;
	yych = peek(state);
	if (yych == 'a') goto yy94;
	goto yy10;
yy17:
	skip(state);
#line 34 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pAMP); }
#line 225 "ext/rbs_extension/lexer.c"
yy19:
	yyaccept = 0;
	skip(state);
	backup = *state;
	yych = peek(state);
	if (yych <= 0x00000000) goto yy5;
	goto yy96;
yy20:
	skip(state);
#line 25 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pLPAREN); }
#line 237 "ext/rbs_extension/lexer.c"
yy22:
	skip(state);
#line 26 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pRPAREN); }
#line 242 "ext/rbs_extension/lexer.c"
yy24:
	skip(state);
	yych = peek(state);
	if (yych == '*') goto yy101;
#line 36 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pSTAR); }
#line 249 "ext/rbs_extension/lexer.c"
yy26:
	skip(state);
	yych = peek(state);
	if (yych <= '/') goto yy10;
	if (yych <= '9') goto yy33;
	if (yych == '@') goto yy32;
	goto yy10;
yy27:
	skip(state);
#line 31 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pCOMMA); }
#line 261 "ext/rbs_extension/lexer.c"
yy29:
	skip(state);
	yych = peek(state);
	if (yych <= '=') {
		if (yych <= '/') goto yy10;
		if (yych <= '9') goto yy33;
		goto yy10;
	} else {
		if (yych <= '>') goto yy103;
		if (yych == '@') goto yy32;
		goto yy10;
	}
yy30:
	yyaccept = 2;
	skip(state);
	backup = *state;
	yych = peek(state);
	if (yych == '.') goto yy105;
yy31:
#line 38 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pDOT); }
#line 283 "ext/rbs_extension/lexer.c"
yy32:
	skip(state);
	goto yy10;
yy33:
	skip(state);
	yych = peek(state);
	if (yych <= '/') goto yy35;
	if (yych <= '9') goto yy33;
	if (yych == '_') goto yy33;
yy35:
#line 51 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tINTEGER); }
#line 296 "ext/rbs_extension/lexer.c"
yy36:
	yyaccept = 3;
	skip(state);
	backup = *state;
	yych = peek(state);
	switch (yych) {
	case '!':	goto yy106;
	case '"':	goto yy108;
	case '$':	goto yy110;
	case '%':
	case '&':
	case '/':
	case '^':
	case '`':
	case '|':
	case '~':	goto yy111;
	case '\'':	goto yy112;
	case '*':	goto yy114;
	case '+':
	case '-':	goto yy115;
	case ':':	goto yy116;
	case '<':	goto yy118;
	case '=':	goto yy119;
	case '>':	goto yy120;
	case '@':	goto yy121;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy122;
	case '[':	goto yy125;
	default:	goto yy37;
	}
yy37:
#line 45 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pCOLON); }
#line 381 "ext/rbs_extension/lexer.c"
yy38:
	skip(state);
	yych = peek(state);
	if (yych <= ';') goto yy39;
	if (yych <= '<') goto yy32;
	if (yych <= '=') goto yy126;
yy39:
#line 47 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pLT); }
#line 391 "ext/rbs_extension/lexer.c"
yy40:
	skip(state);
	yych = peek(state);
	if (yych <= '>') {
		if (yych <= '<') goto yy41;
		if (yych <= '=') goto yy127;
		goto yy128;
	} else {
		if (yych == '~') goto yy32;
	}
yy41:
#line 44 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pEQ); }
#line 405 "ext/rbs_extension/lexer.c"
yy42:
	skip(state);
	yych = peek(state);
	if (yych <= '<') goto yy10;
	if (yych <= '>') goto yy32;
	goto yy10;
yy43:
	skip(state);
#line 35 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pQUESTION); }
#line 416 "ext/rbs_extension/lexer.c"
yy45:
	yyaccept = 0;
	skip(state);
	backup = *state;
	yych = peek(state);
	if (yych <= '^') {
		if (yych <= '?') goto yy5;
		if (yych <= '@') goto yy130;
		if (yych <= 'Z') goto yy131;
		goto yy5;
	} else {
		if (yych == '`') goto yy5;
		if (yych <= 'z') goto yy131;
		goto yy5;
	}
yy46:
	skip(state);
	yych = peek(state);
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy134;
		} else {
			if (yych <= '9') goto yy46;
			if (yych >= '=') goto yy136;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy48;
			if (yych <= 'Z') goto yy46;
		} else {
			if (yych == '`') goto yy48;
			if (yych <= 'z') goto yy46;
		}
	}
yy48:
#line 122 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tUIDENT); }
#line 454 "ext/rbs_extension/lexer.c"
yy49:
	skip(state);
	yych = peek(state);
	if (yych == ']') goto yy127;
#line 27 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pLBRACKET); }
#line 461 "ext/rbs_extension/lexer.c"
yy51:
	skip(state);
#line 28 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pRBRACKET); }
#line 466 "ext/rbs_extension/lexer.c"
yy53:
	skip(state);
#line 33 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pHAT); }
#line 471 "ext/rbs_extension/lexer.c"
yy55:
	skip(state);
	yych = peek(state);
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy134;
		} else {
			if (yych <= '9') goto yy138;
			if (yych >= '=') goto yy136;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy56;
			if (yych <= 'Z') goto yy141;
		} else {
			if (yych == '`') goto yy56;
			if (yych <= 'z') goto yy138;
		}
	}
yy56:
#line 125 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tULLIDENT); }
#line 494 "ext/rbs_extension/lexer.c"
yy57:
	yyaccept = 4;
	skip(state);
	backup = *state;
	yych = peek(state);
	if (yych <= ' ') {
		if (yych <= 0x00000000) goto yy58;
		if (yych <= 0x0000001F) goto yy144;
	} else {
		if (yych != ':') goto yy144;
	}
yy58:
#line 40 "ext/rbs_extension/lexer.re"
	{  return next_token(state, tOPERATOR); }
#line 509 "ext/rbs_extension/lexer.c"
yy59:
	skip(state);
	yych = peek(state);
	if (yych == 'l') goto yy146;
	if (yych == 't') goto yy147;
	goto yy67;
yy60:
#line 121 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tLIDENT); }
#line 519 "ext/rbs_extension/lexer.c"
yy61:
	skip(state);
	yych = peek(state);
	if (yych == 'o') goto yy148;
	goto yy67;
yy62:
	skip(state);
	yych = peek(state);
	if (yych == 'l') goto yy149;
	goto yy67;
yy63:
	skip(state);
	yych = peek(state);
	if (yych == 'e') goto yy150;
	goto yy67;
yy64:
	skip(state);
	yych = peek(state);
	if (yych == 'n') goto yy151;
	if (yych == 'x') goto yy152;
	goto yy67;
yy65:
	skip(state);
	yych = peek(state);
	if (yych == 'a') goto yy153;
	goto yy67;
yy66:
	skip(state);
	yych = peek(state);
yy67:
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy134;
			goto yy60;
		} else {
			if (yych <= '9') goto yy66;
			if (yych <= '<') goto yy60;
			goto yy136;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy60;
			if (yych <= 'Z') goto yy66;
			goto yy60;
		} else {
			if (yych == '`') goto yy60;
			if (yych <= 'z') goto yy66;
			goto yy60;
		}
	}
yy68:
	skip(state);
	yych = peek(state);
	if (yych == 'n') goto yy154;
	goto yy67;
yy69:
	skip(state);
	yych = peek(state);
	if (yych == 'o') goto yy156;
	goto yy67;
yy70:
	skip(state);
	yych = peek(state);
	if (yych == 'i') goto yy157;
	goto yy67;
yy71:
	skip(state);
	yych = peek(state);
	if (yych == 'u') goto yy158;
	goto yy67;
yy72:
	skip(state);
	yych = peek(state);
	if (yych == 'r') goto yy159;
	if (yych == 'u') goto yy160;
	goto yy67;
yy73:
	skip(state);
	yych = peek(state);
	if (yych == 'e') goto yy161;
	if (yych == 'i') goto yy162;
	goto yy67;
yy74:
	skip(state);
	yych = peek(state);
	if (yych <= 'q') {
		if (yych == 'o') goto yy163;
		goto yy67;
	} else {
		if (yych <= 'r') goto yy164;
		if (yych == 'y') goto yy165;
		goto yy67;
	}
yy75:
	skip(state);
	yych = peek(state);
	if (yych == 'n') goto yy166;
	goto yy67;
yy76:
	skip(state);
	yych = peek(state);
	if (yych == 'o') goto yy167;
	goto yy67;
yy77:
	skip(state);
#line 29 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pLBRACE); }
#line 627 "ext/rbs_extension/lexer.c"
yy79:
	skip(state);
#line 32 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pBAR); }
#line 632 "ext/rbs_extension/lexer.c"
yy81:
	skip(state);
#line 30 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pRBRACE); }
#line 637 "ext/rbs_extension/lexer.c"
yy83:
	skip(state);
	yych = peek(state);
yy84:
	if (yych <= '"') {
		if (yych <= 0x00000000) goto yy85;
		if (yych <= '!') goto yy83;
		goto yy86;
	} else {
		if (yych == '\\') goto yy88;
		goto yy83;
	}
yy85:
	*state = backup;
	if (yyaccept <= 4) {
		if (yyaccept <= 2) {
			if (yyaccept <= 1) {
				if (yyaccept == 0) {
					goto yy5;
				} else {
					goto yy10;
				}
			} else {
				goto yy31;
			}
		} else {
			if (yyaccept == 3) {
				goto yy37;
			} else {
				goto yy58;
			}
		}
	} else {
		if (yyaccept <= 6) {
			if (yyaccept == 5) {
				goto yy87;
			} else {
				goto yy98;
			}
		} else {
			if (yyaccept == 7) {
				goto yy183;
			} else {
				goto yy191;
			}
		}
	}
yy86:
	skip(state);
yy87:
#line 99 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tDQSTRING); }
#line 690 "ext/rbs_extension/lexer.c"
yy88:
	skip(state);
	yych = peek(state);
	if (yych <= '"') {
		if (yych <= 0x00000000) goto yy85;
		if (yych <= '!') goto yy83;
		goto yy168;
	} else {
		if (yych == '\\') goto yy88;
		goto yy83;
	}
yy90:
	skip(state);
	yych = peek(state);
	if (yych <= ',') {
		if (yych <= '\f') {
			if (yych <= 0x00000000) goto yy92;
			if (yych <= 0x00000008) goto yy90;
			if (yych >= '\v') goto yy90;
		} else {
			if (yych <= 0x0000001F) {
				if (yych >= 0x0000000E) goto yy90;
			} else {
				if (yych == '#') goto yy90;
			}
		}
	} else {
		if (yych <= '>') {
			if (yych <= '-') goto yy90;
			if (yych <= '/') goto yy92;
			if (yych <= '9') goto yy90;
		} else {
			if (yych <= '^') {
				if (yych <= 'Z') goto yy90;
			} else {
				if (yych <= 'z') goto yy90;
				if (yych >= 0x0000007F) goto yy90;
			}
		}
	}
yy92:
#line 132 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tGIDENT); }
#line 734 "ext/rbs_extension/lexer.c"
yy93:
	skip(state);
	goto yy92;
yy94:
	skip(state);
	yych = peek(state);
	if (yych <= 'Z') {
		if (yych <= '(') {
			if (yych <= '\'') goto yy85;
			goto yy169;
		} else {
			if (yych == '<') goto yy171;
			goto yy85;
		}
	} else {
		if (yych <= 'z') {
			if (yych <= '[') goto yy173;
			goto yy85;
		} else {
			if (yych <= '{') goto yy175;
			if (yych <= '|') goto yy177;
			goto yy85;
		}
	}
yy95:
	skip(state);
	yych = peek(state);
yy96:
	if (yych <= '\'') {
		if (yych <= 0x00000000) goto yy85;
		if (yych <= '&') goto yy95;
	} else {
		if (yych == '\\') goto yy99;
		goto yy95;
	}
yy97:
	skip(state);
yy98:
#line 100 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tSQSTRING); }
#line 775 "ext/rbs_extension/lexer.c"
yy99:
	skip(state);
	yych = peek(state);
	if (yych <= '\'') {
		if (yych <= 0x00000000) goto yy85;
		if (yych <= '&') goto yy95;
		goto yy179;
	} else {
		if (yych == '\\') goto yy99;
		goto yy95;
	}
yy101:
	skip(state);
#line 37 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pSTAR2); }
#line 791 "ext/rbs_extension/lexer.c"
yy103:
	skip(state);
#line 42 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pARROW); }
#line 796 "ext/rbs_extension/lexer.c"
yy105:
	skip(state);
	yych = peek(state);
	if (yych == '.') goto yy180;
	goto yy85;
yy106:
	skip(state);
	yych = peek(state);
	if (yych == '=') goto yy111;
	if (yych == '~') goto yy111;
yy107:
#line 119 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tSYMBOL); }
#line 810 "ext/rbs_extension/lexer.c"
yy108:
	skip(state);
	yych = peek(state);
	if (yych <= '"') {
		if (yych <= 0x00000000) goto yy85;
		if (yych <= '!') goto yy108;
		goto yy182;
	} else {
		if (yych == '\\') goto yy184;
		goto yy108;
	}
yy110:
	skip(state);
	yych = peek(state);
	if (yych <= ')') {
		if (yych <= 0x0000001F) {
			if (yych <= '\n') {
				if (yych <= 0x00000000) goto yy85;
				if (yych <= 0x00000008) goto yy186;
				goto yy85;
			} else {
				if (yych == '\r') goto yy85;
				goto yy186;
			}
		} else {
			if (yych <= '#') {
				if (yych <= ' ') goto yy85;
				if (yych <= '"') goto yy189;
				goto yy186;
			} else {
				if (yych == '%') goto yy85;
				if (yych <= '\'') goto yy189;
				goto yy85;
			}
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '/') {
				if (yych == '-') goto yy186;
				goto yy189;
			} else {
				if (yych <= '9') goto yy186;
				if (yych <= '>') goto yy189;
				goto yy186;
			}
		} else {
			if (yych <= '^') {
				if (yych == '\\') goto yy189;
				goto yy85;
			} else {
				if (yych <= 'z') goto yy186;
				if (yych <= '}') goto yy85;
				if (yych <= '~') goto yy189;
				goto yy186;
			}
		}
	}
yy111:
	skip(state);
	goto yy107;
yy112:
	skip(state);
	yych = peek(state);
	if (yych <= '\'') {
		if (yych <= 0x00000000) goto yy85;
		if (yych <= '&') goto yy112;
		goto yy190;
	} else {
		if (yych == '\\') goto yy192;
		goto yy112;
	}
yy114:
	skip(state);
	yych = peek(state);
	if (yych == '*') goto yy111;
	goto yy107;
yy115:
	skip(state);
	yych = peek(state);
	if (yych == '@') goto yy111;
	goto yy107;
yy116:
	skip(state);
#line 46 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pCOLON2); }
#line 896 "ext/rbs_extension/lexer.c"
yy118:
	skip(state);
	yych = peek(state);
	if (yych <= ';') goto yy107;
	if (yych <= '<') goto yy111;
	if (yych <= '=') goto yy194;
	goto yy107;
yy119:
	skip(state);
	yych = peek(state);
	if (yych == '=') goto yy195;
	if (yych == '~') goto yy111;
	goto yy85;
yy120:
	skip(state);
	yych = peek(state);
	if (yych <= '<') goto yy107;
	if (yych <= '>') goto yy111;
	goto yy107;
yy121:
	skip(state);
	yych = peek(state);
	if (yych <= '^') {
		if (yych <= '?') goto yy85;
		if (yych <= '@') goto yy196;
		if (yych <= 'Z') goto yy197;
		goto yy85;
	} else {
		if (yych == '`') goto yy85;
		if (yych <= 'z') goto yy197;
		goto yy85;
	}
yy122:
	skip(state);
	yych = peek(state);
	if (yych <= '>') {
		if (yych <= '/') {
			if (yych == '!') goto yy200;
		} else {
			if (yych <= '9') goto yy122;
			if (yych == '=') goto yy200;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '?') goto yy200;
			if (yych <= '@') goto yy124;
			if (yych <= 'Z') goto yy122;
		} else {
			if (yych == '`') goto yy124;
			if (yych <= 'z') goto yy122;
		}
	}
yy124:
#line 115 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tSYMBOL); }
#line 952 "ext/rbs_extension/lexer.c"
yy125:
	skip(state);
	yych = peek(state);
	if (yych == ']') goto yy195;
	goto yy85;
yy126:
	skip(state);
	yych = peek(state);
	if (yych == '>') goto yy32;
	goto yy10;
yy127:
	skip(state);
	yych = peek(state);
	if (yych == '=') goto yy32;
	goto yy10;
yy128:
	skip(state);
#line 43 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pFATARROW); }
#line 972 "ext/rbs_extension/lexer.c"
yy130:
	skip(state);
	yych = peek(state);
	if (yych <= '^') {
		if (yych <= '@') goto yy85;
		if (yych <= 'Z') goto yy201;
		goto yy85;
	} else {
		if (yych == '`') goto yy85;
		if (yych <= 'z') goto yy201;
		goto yy85;
	}
yy131:
	skip(state);
	yych = peek(state);
	if (yych <= 'Z') {
		if (yych <= '/') goto yy133;
		if (yych <= '9') goto yy131;
		if (yych >= 'A') goto yy131;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy131;
		} else {
			if (yych <= '`') goto yy133;
			if (yych <= 'z') goto yy131;
		}
	}
yy133:
#line 129 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tAIDENT); }
#line 1003 "ext/rbs_extension/lexer.c"
yy134:
	skip(state);
#line 126 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tBANGIDENT); }
#line 1008 "ext/rbs_extension/lexer.c"
yy136:
	skip(state);
#line 127 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tEQIDENT); }
#line 1013 "ext/rbs_extension/lexer.c"
yy138:
	skip(state);
	yych = peek(state);
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy134;
		} else {
			if (yych <= '9') goto yy138;
			if (yych >= '=') goto yy136;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy140;
			if (yych <= 'Z') goto yy138;
		} else {
			if (yych == '`') goto yy140;
			if (yych <= 'z') goto yy138;
		}
	}
yy140:
#line 123 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tULLIDENT); }
#line 1036 "ext/rbs_extension/lexer.c"
yy141:
	skip(state);
	yych = peek(state);
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy134;
		} else {
			if (yych <= '9') goto yy141;
			if (yych >= '=') goto yy136;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy143;
			if (yych <= 'Z') goto yy141;
		} else {
			if (yych == '`') goto yy143;
			if (yych <= 'z') goto yy141;
		}
	}
yy143:
#line 124 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tULIDENT); }
#line 1059 "ext/rbs_extension/lexer.c"
yy144:
	skip(state);
	yych = peek(state);
	if (yych <= 0x00000000) goto yy85;
	if (yych == '`') goto yy204;
	goto yy144;
yy146:
	skip(state);
	yych = peek(state);
	if (yych == 'i') goto yy206;
	goto yy67;
yy147:
	skip(state);
	yych = peek(state);
	if (yych == 't') goto yy207;
	goto yy67;
yy148:
	skip(state);
	yych = peek(state);
	if (yych == 'o') goto yy208;
	if (yych == 't') goto yy209;
	goto yy67;
yy149:
	skip(state);
	yych = peek(state);
